Project Deliveroo_SendIT {
  database_type: "PostgreSQL"
  Note: "Parcel delivery management system"
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(20) [not null, default: 'user']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table profiles {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique]
  full_name varchar(150) [not null]
  phone varchar(30)
  profile_image varchar(500)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table addresses {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  label varchar(100)
  address_line varchar(255) [not null]
  city varchar(100) [not null]
  latitude decimal(10,7)
  longitude decimal(10,7)
  is_default boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table weight_categories {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [not null, unique]
  min_weight decimal(10,2) [not null]
  max_weight decimal(10,2) [not null]
  base_price decimal(12,2) [not null]
  price_per_km decimal(12,2) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table parcels {
  id uuid [pk, default: `gen_random_uuid()`]
  tracking_number varchar(50) [not null, unique]
  user_id uuid [not null]
  weight_category_id uuid [not null]

  pickup_address varchar(255) [not null]
  pickup_latitude decimal(10,7)
  pickup_longitude decimal(10,7)

  destination_address varchar(255) [not null]
  destination_latitude decimal(10,7)
  destination_longitude decimal(10,7)

  present_latitude decimal(10,7)
  present_longitude decimal(10,7)

  status varchar(30) [not null, default: 'PENDING']

  price decimal(12,2) [not null]
  distance decimal(10,2)
  duration integer

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table status_history {
  id uuid [pk, default: `gen_random_uuid()`]
  parcel_id uuid [not null]
  changed_by uuid [not null]
  status varchar(30) [not null]
  latitude decimal(10,7)
  longitude decimal(10,7)
  notes text
  created_at timestamp [not null, default: `now()`]
}

Table notifications {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  parcel_id uuid
  type varchar(50) [not null]
  title varchar(150) [not null]
  message text [not null]
  channel varchar(30) [not null]
  is_read boolean [not null, default: false]
  sent_at timestamp
  created_at timestamp [not null, default: `now()`]
}

Table notification_preferences {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique]
  email_enabled boolean [not null, default: true]
  status_updates boolean [not null, default: true]
  location_updates boolean [not null, default: true]
  parcel_updates boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid
  action varchar(100) [not null]
  entity_type varchar(50) [not null]
  entity_id uuid
  old_value text
  new_value text
  ip_address varchar(45)
  created_at timestamp [not null, default: `now()`]
}

Table refresh_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token_hash varchar(255) [not null]
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null, default: `now()`]
}

Table password_reset_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token_hash varchar(255) [not null]
  expires_at timestamp [not null]
  used_at timestamp
  created_at timestamp [not null, default: `now()`]
}


// Relationships

Ref: users.id - profiles.user_id

Ref: users.id < addresses.user_id

Ref: users.id < parcels.user_id

Ref: weight_categories.id < parcels.weight_category_id

Ref: parcels.id < status_history.parcel_id

Ref: users.id < status_history.changed_by

Ref: users.id < notifications.user_id

Ref: parcels.id < notifications.parcel_id

Ref: users.id - notification_preferences.user_id

Ref: users.id < audit_logs.user_id

Ref: users.id < refresh_tokens.user_id

Ref: users.id < password_reset_tokens.user_id